--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -22,7 +22,7 @@
         <img src="img/portrait.jpg" alt="Robin's portrait">
         <h1><span class="tilted_bg"><span class="bg">Robin</span></span><br>Bécherraz</h1>
         <p>I'm a young media engineer, passionate about web and technology.</p>
-        <p>My background as a computer scientist taught me a lot about technical stuff and corporate world. But I wanted put terminal aside for a moment to learn
+        <p>My background as a computer scientist taught me a lot of technical knowledges and brought me some experience in the corporate world. But I wanted to put my terminal aside for a moment to learn
 beyond pure technic. This led me to become a web developer with a large range of side skills, like UX, communication, marketing, content creation and more.</p>
     </section>
 
@@ -31,10 +31,10 @@ beyond pure technic. This led me to become a web developer with a large range of
         <div class="content">
             <h3>I live in</h3>
             <p>Romandy Switzerland</p>
-            <h3>I'm Born in</h3>
+            <h3>I was born in</h3>
             <p>1998</p>
             <h3>I speak</h3>
-            <p>French (mother tongue) English (speak/write B2, understand C1)</p>
+            <p>French (mother tongue) English (speakink/writing B2, I understand C1)</p>
             <h3>Education</h3>
             <p>IT scientist CFC, media engineering bachelor's degree</p>
             <h3>My favorite ...</h3>
