--- a/src/html/projects/cellularautomaton.hbs
+++ b/src/html/projects/cellularautomaton.hbs
@@ -11,13 +11,13 @@
     <section id="sect_project">
         {{> partials/projectHeader data=data project=automaton}}
         <h2><span class="tilted_bg"><span class="bg">TL ; DR</span></span></h2>
-        <p>This was a school exercice that I did in depth. It's a <a href="https://en.wikipedia.org/wiki/Cellular_automaton" target="blank">Cellular automaton</a> which you can change the birth and surviving rules.</p>
+        <p>This is an exercice we did at school, which I went further into. It's a <a href="https://en.wikipedia.org/wiki/Cellular_automaton" target="blank">Cellular automaton</a> which you can change the birth and surviving rules.</p>
         <p>hint:
             <ul>
                 <li>Press "P" to pause and hold "A" to set the initial birth on 0.</li>
                 <li>Change the rules to B: 1,3 and S: 1,3</li>
                 <li>Pres "R" to reset the grid, click on a cell and press "P" to resume the automaton.</li>
-                <li>Enjoy alive mandala!</li>
+                <li>Enjoy the living mandala!</li>
             </ul>
         </p>
         <div class="mockups">
