--- a/src/html/projects/myportfolio.hbs
+++ b/src/html/projects/myportfolio.hbs
@@ -19,14 +19,14 @@
             <img src="../img/myportfolio-3.jpg" alt="My portfolio screenshot" class="screenshot small">
         </div>
         <h2><span class="tilted_bg"><span class="bg">Context & Solutions</span></span></h2>
-        <p>I needed to make this website quickly. And wanted it to be evolutive; I wanted to be able to add my future projects easily.
-        I had already used Handlebars templating in an SPA project, where templates were dinamically generated in JS. But here, I wanted to use it for development, and serve a static page to the client.</p>
+        <p>I hadn't much time to build this website and I wanted it to be evolutive; I wanted to be able to add my future projects easily.
+        I had already used Handlebars templating in an SPA project, where templates were dinamically generated in JS. But here, I wanted to use it for development and serve a static page to the client.</p>
 
-        <p>I found the <a href="https://github.com/sagold/handlebars-webpack-plugin" target="blank">handlebars-webpack-plugin</a>, who was exactly suited for my needs.
-        I added it to my usual Webpack config, I also added Sass, which I had never used but fell in <3 with. Whit that config, I created a frontend development environment setup that you can find <a href="https://github.com/robiiiiiiiiiiiin/HandleBabelSassPack" target="blank">here</a>. I will probably re-use that setup for future simple websites.</p>
+        <p>I found the <a href="https://github.com/sagold/handlebars-webpack-plugin" target="blank">handlebars-webpack-plugin</a>, which was perfectly suited for my needs.
+        I added it to my usual Webpack config. I also added Sass, which I had never used but fell in <3 with. With that config, I created a frontend development environment setup that you can find <a href="https://github.com/robiiiiiiiiiiiin/HandleBabelSassPack" target="blank">here</a>. I will probably re-use that setup for future projects.</p>
 
         <h2><span class="tilted_bg"><span class="bg">Room for improvement</span></span></h2>
-        <p>The handlebars-webpack-plugin was perfectly suited for my needs, but it may be a little limited for other projects. I'll try to use Gulp instead of Handlebars and see if it's better. I'll also look for something that can automatically optimize images. Gulp may also be a good solution for that.</p>
+        <p>The handlebars-webpack-plugin was perfectly suited for my needs, but it might be a little limited for other projects. I'll try to use Gulp instead of Handlebars and see if it's better. I'll also look for something that can automatically optimize images. Gulp might also be a good solution for that.</p>
     </section>
 </body>
 </html>
