--- a/src/html/projects/swisssolarboat.hbs
+++ b/src/html/projects/swisssolarboat.hbs
@@ -11,13 +11,13 @@
     <section id="sect_project">
         {{> partials/projectHeader data=data project=swisssolarboat}}
         <h2><span class="tilted_bg"><span class="bg">TL ; DR</span></span></h2>
-        <p>I was a member of the communication team for the EPFL's Swiss Solar Boat Association. Me and an other member worked on the website. It's full WordPress with Divi builder except for the <a href="https://swisssolarboat.ch/en/team-en/" target="blank">Team</a> page.</p>
+        <p>I was a member of the communication team for the EPFL's Swiss Solar Boat Association. An other member and I worked on the website. It has been built with WordPress and Divi builder, except for the <a href="https://swisssolarboat.ch/en/team-en/" target="blank">Team</a> page.</p>
         <div class="mockups">
             <img src="../img/ssb-1.jpg" alt="Swiss Solar Boat screenshot" class="screenshot">
             <img src="../img/ssb-2.jpg" alt="Swiss Solar Boat screenshot" class="mobile screenshot">
         </div>
         <h2><span class="tilted_bg"><span class="bg">Room for improvement</span></span></h2>
-        <p>We used WordPress because we didn't have the skills to develop it from scratch. But I don't particullarly like WordPress so I would develop it by hand if I had to re-do it</p>
+        <p>We used WordPress because we didn't have the skills to develop it from scratch. But I don't particularly like WordPress anymore so I would develop it by hand if I had to re-do it</p>
     </section>
 </body>
 </html>
