--- a/src/html/projects/cellularautomaton.hbs
+++ b/src/html/projects/cellularautomaton.hbs
@@ -3,21 +3,22 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=automaton 
-        desc="A life like automaton which you can change the birth and surviving rules made in JavaScript and HTML Canvas."
+        metaDesc="automaton.metaDesc"
     }}
-    <title>My projects - Cellular Automaton</title>
+    <title data-t>automaton.titleTag</title>
 </head>
 <body>
+    {{>partials/langBtn project=automaton}}
     <section id="sect_project">
         {{> partials/projectHeader data=data project=automaton}}
         <h2><span class="tilted_bg"><span class="bg">TL ; DR</span></span></h2>
-        <p>This is an exercice we did at school, which I went further into. It's a <a href="https://en.wikipedia.org/wiki/Cellular_automaton" target="blank">Cellular automaton</a> which you can change the birth and surviving rules.</p>
-        <p>hint:
+        <p data-t>automaton.sentence1</p>
+        <p><span data-t>automaton.hint</span>
             <ul>
-                <li>Press "P" to pause and hold "A" to set the initial birth on 0.</li>
-                <li>Change the rules to B: 1,3 and S: 1,3</li>
-                <li>Pres "R" to reset the grid, click on a cell and press "P" to resume the automaton.</li>
-                <li>Enjoy the living mandala!</li>
+                <li data-t>automaton.hint1</li>
+                <li data-t>automaton.hint2</li>
+                <li data-t>automaton.hint3</li>
+                <li data-t>automaton.hint4</li>
             </ul>
         </p>
         <div class="mockups">
@@ -25,5 +26,6 @@
             <img src="../img/automaton-2.jpg" alt="Cellular automaton screenshot" class="screenshot">
         </div>
     </section>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
