--- a/src/html/projects/gryonbiketest.hbs
+++ b/src/html/projects/gryonbiketest.hbs
@@ -3,22 +3,23 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=gryonbiketest 
-        desc="A platform for a bike test event. A Bike Advisor for the visitors and a management platform for the staff. Built with Laravel by 3 developers in 1 month"
+        metaDesc="gryonbiketest.metaDesc"
     }}
-    <title>My projects - Gryon Bike Test</title>
+    <title data-t>gryonbiketest.titleTag</title>
 </head>
 <body>
+    {{>partials/langBtn project=gryonbiketest}}
     <section id="sect_project">
         {{> partials/projectHeader data=data project=gryonbiketest}}
         <h2><span class="tilted_bg"><span class="bg">TL ; DR</span></span></h2>
-        <p><a href="https://www.bikegryon.ch/" target="blank">Gryon Bike Test</a> is a three days event where people can test a multitude of bikes brought by different bikes sellers. I leaded a three developers team during a one month school project which aim was to build a MVP application for that event. This app is a management interface for the event staff, and it's also a kind of "<s>Trip</s> Bike advisor" for the event visitors</p>
-        <p><span>You can test the app with the following credentials:</span>
+        <p data-t>gryonbiketest.sentence1</p>
+        <p><span data-t>gryonbiketest.sentence2</span>
             <ul>
                 <li>visiteur@gmail.com</li>
                 <li>exposant@gmail.com</li>
                 <li>admin@gmail.com</li>
             </ul>
-            <span>The password is "password" for all of them</span>
+            <span data-t>gryonbiketest.sentence3</span>
         </p>
         <div class="mockups">
             <img src="../img/biketest-1.jpg" alt="Gryon Bike Test screenshot" class="screenshot">
@@ -29,30 +30,32 @@
             <img src="../img/biketest-6.jpg" alt="Gryon Bike Test screenshot" class="mobile screenshot">
             <img src="../img/biketest-7.jpg" alt="Gryon Bike Test screenshot" class="mobile screenshot">
         </div>
-        <h2><span class="tilted_bg"><span class="bg">Context</span></span></h2>
-        <p>This project was the year-end project of my bachelor 2nd year. The goal was to build, in 20 days, a functionnable MVP for the <a href="https://www.bikegryon.ch/" target="blank">Gryon Bike Test</a>, allowing their staff to manage the visitors and the bikes loaning.</p>
-        <p>We were a team of five people. Two of us worked on the visual / UX part, One was mainly working on the HTML / CSS, and the last person and myself worked on the backend. I was leading our three people developement team.</p>
-        <p>This project was not only a coding project, we also did all the ideation to determine our concept and our functionnalities.</p>
+        <h2><span class="tilted_bg"><span class="bg" data-t>projects.context</span></span></h2>
+        <p data-t>gryonbiketest.cont1</p>
+        <p data-t>gryonbiketest.cont2</p>
+        <p data-t>gryonbiketest.cont3</p>
 
-        <h2><span class="tilted_bg"><span class="bg">Functionnalities</span></span></h2>
-        <p>There are the functionnalities we implemented:</p>
-        <span class="ul_title">Functionnalities for the staff</span>
+        <h2><span class="tilted_bg"><span class="bg" data-t>projects.func</span></span></h2>
+        <p data-t>gryonbiketest.func0</p>
+        <span class="ul_title" data-t>gryonbiketest.func1</span>
         <ul>
-            <li>Management of the application's users and their rights</li>
+            <li data-t>gryonbiketest.func11</li>
         </ul>
-        <span class="ul_title">Functionnalities for the bikes sellers</span>
+        <span class="ul_title" data-t>gryonbiketest.func2</span>
         <ul>
-            <li>Manage their bikes catalogue</li>
+            <li data-t>gryonbiketest.func21</li>
+            <li data-t>gryonbiketest.func22</li>
         </ul>
-        <span class="ul_title">Functionnalities for the visitors</span>
+        <span class="ul_title" data-t>gryonbiketest.func3</span>
         <ul>
-            <li>Buy a ticket (The payment part is fake, so it's more of a registration) / Login</li>
-            <li>See all available bikes at the event with their ratings and comments</li>
-            <li>Rate the bike they have tested on mutliple criterias</li>
+            <li data-t>gryonbiketest.func31</li>
+            <li data-t>gryonbiketest.func32</li>
+            <li data-t>gryonbiketest.func33</li>
         </ul>
 
-        <h2><span class="tilted_bg"><span class="bg">Room for improvement</span></span></h2>
-        <p>The app is a MVP. So a lot of functionnalities could be added. I'm pretty happy with the code, but some times we learnt something during the development and we didn't have time to refactor all the code. The database modeling could surely be improved as well. Also, our CSS skills were modest at that time, so the responsive and cross-browser CSS could be improved.</p>
+        <h2><span class="tilted_bg"><span class="bg" data-t>projects.RoomForImprovement</span></span></h2>
+        <p data-t>gryonbiketest.impr1</p>
     </section>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
