--- a/src/html/projects/theapologist.hbs
+++ b/src/html/projects/theapologist.hbs
@@ -3,19 +3,21 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=theapologist 
-        desc="Redesign of The Apologist website."
+        metaDesc="theapologist.metaDesc"
     }}
-    <title>My projects - The Apologist</title>
+    <title data-t>theapologist.titleTag</title>
 </head>
 <body>
+    {{>partials/langBtn project=theapologist}}
     <section id="sect_project">
         {{> partials/projectHeader data=data project=theapologist}}
         <h2><span class="tilted_bg"><span class="bg">TL ; DR</span></span></h2>
-        <p>I was hired to change the WordPress template of a website, which was already in production. It contained arround 500 articles. I had to make some SQL requests in the WordPress' database to adapt the articles' content to the way the new template works.</p>
+        <p data-t>theapologist.sentence1</p>
         <div class="mockups">
             <img src="../img/theapologist-1.jpg" alt="The Apologist screenshot" class="screenshot">
             <img src="../img/theapologist-2.jpg" alt="The Apologist screenshot" class="screenshot">
         </div>
 </section>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
